updated file pathing

--- a/ADS Coursework - TSP/ADS CW/.project
+++ b/ADS Coursework - TSP/ADS CW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ADS Coursework - TSP</name>
+	<name>ADS CW</name>
 	<comment></comment>
 	<projects>
 	</projects>
